--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
-"scroll_position": 0.0,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -45,16 +45,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
+"row": 31,
+"scroll_position": 3.0,
 "selection": true,
-"selection_from_column": 1,
-"selection_from_line": 5,
-"selection_to_column": 38,
-"selection_to_line": 5,
+"selection_from_column": 2,
+"selection_from_line": 30,
+"selection_to_column": 29,
+"selection_to_line": 31,
 "syntax_highlighter": "Standard"
 }
 
@@ -77,12 +77,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 67,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 25,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 25,
+"selection_to_column": 67,
+"selection_to_line": 25,
 "syntax_highlighter": "Standard"
 }
 
@@ -183,11 +187,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 71,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 12.0,
+"scroll_position": 72.0,
 "selection": true,
 "selection_from_column": 2,
 "selection_from_line": 24,
@@ -215,11 +219,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 149,
-"scroll_position": 135.0,
+"row": 129,
+"scroll_position": 105.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -229,11 +233,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 63,
+"scroll_position": 34.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -243,11 +247,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 94,
-"scroll_position": 81.0,
+"row": 100,
+"scroll_position": 90.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -285,10 +289,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 41,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -299,11 +303,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 7.0,
+"row": 19,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -313,16 +317,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 9,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 5,
-"selection_to_column": 2,
-"selection_to_line": 23,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -331,10 +331,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 12,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -561,10 +561,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 23,
 "scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 1,
@@ -635,11 +635,39 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 6,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 7.0,
+"row": 22,
+"scroll_position": 9.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/menus/GameLostMenu.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 49,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 19,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/menus/GameWonMenu.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
