--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -31,10 +31,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 61,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
+"row": 26,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -45,16 +45,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
-"scroll_position": 6.0,
+"row": 22,
+"scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 2,
-"selection_from_line": 31,
-"selection_to_column": 29,
-"selection_to_line": 31,
+"selection_from_column": 1,
+"selection_from_line": 5,
+"selection_to_column": 2,
+"selection_to_line": 22,
 "syntax_highlighter": "Standard"
 }
 
@@ -63,12 +63,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 0.0,
-"selection": false,
+"row": 57,
+"scroll_position": 28.0,
+"selection": true,
+"selection_from_column": 22,
+"selection_from_line": 57,
+"selection_to_column": 35,
+"selection_to_line": 57,
 "syntax_highlighter": "Standard"
 }
 
@@ -77,16 +81,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 67,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
+"row": 19,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 3,
-"selection_from_line": 25,
-"selection_to_column": 67,
-"selection_to_line": 25,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -95,11 +95,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 63,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 38,
-"scroll_position": 10.0,
+"row": 39,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -127,11 +127,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 69,
-"scroll_position": 53.0,
+"row": 26,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -141,11 +141,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 53.0,
+"row": 33,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -182,30 +182,16 @@ state={
 "syntax_highlighter": "Standard"
 }
 
-[res://scripts/data/InventoryMenu.cs]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 38,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Standard"
-}
-
 [res://scripts/menus/UserInterface.cs]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 60,
+"column": 46,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 58,
-"scroll_position": 36.0,
+"row": 286,
+"scroll_position": 281.765,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -215,16 +201,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 52,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 39,
-"selection_from_line": 4,
-"selection_to_column": 52,
-"selection_to_line": 4,
+"row": 19,
+"scroll_position": 5.0,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -233,11 +215,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 63,
-"scroll_position": 34.0,
+"row": 7,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -247,10 +229,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 148,
+"row": 151,
 "scroll_position": 125.0,
 "selection": true,
 "selection_from_column": 1,
@@ -265,11 +247,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 48,
+"column": 8,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 6.0,
+"row": 24,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -279,11 +261,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 81,
-"scroll_position": 0.0,
+"row": 45,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -307,16 +289,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
+"row": 21,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 16,
-"selection_from_line": 27,
-"selection_to_column": 25,
-"selection_to_line": 27,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -380,11 +358,7 @@ state={
 "h_scroll_position": 0,
 "row": 17,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 17,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -393,16 +367,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 21,
-"selection_to_column": 35,
-"selection_to_line": 21,
+"row": 96,
+"scroll_position": 55.0,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -411,16 +381,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 17,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 1,
-"selection_to_line": 16,
+"selection": false,
 "syntax_highlighter": "Standard"
 }
 
@@ -461,10 +427,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 69,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -604,9 +570,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 15,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 15,
 "syntax_highlighter": "Standard"
 }
 
@@ -671,11 +641,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 62,
-"scroll_position": 49.0,
+"row": 56,
+"scroll_position": 56.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -731,7 +701,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 50,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
@@ -746,6 +716,62 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/menus/InventoryMenu.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 38,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/data/Settings.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/data/SettingsData.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 3,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 81,
+"scroll_position": 63.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://scripts/menus/SkillsMenu.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
